--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,22 @@ table {
     margin-top: 20px;
 }
 
+.toggle-button {
+    cursor: pointer;
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+    font-size: 1em;
+}
+  
+.fat-row {
+    font-weight: bold;
+    /* Add any other styling you want for the fat row */
+}
+  
+.service-name {
+    vertical-align: top;
+}
+  
+
